--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-jwt": "^1.1.6",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
