--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.26",
     "twin.macro": "^2.8.2",
     "web-vitals": "^2.1.4"
   },
