--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,10 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
-    "@stripe/stripe-js": "^1.35.0",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.9.0",
+    "cors": "^2.8.5",
+    "stripe": "^8.96.0",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
