--- a/client/package.json
+++ b/client/package.json
@@ -6,18 +6,18 @@
     "@emotion/react": "^11.10.0",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.9.0",
     "@tailwindcss/forms": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "canvas-confetti": "^1.5.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
-    "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.9.0",
-    "cors": "^2.8.5",
-    "stripe": "^8.96.0",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +30,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "stripe": "^8.96.0",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.26",
     "twin.macro": "^2.8.2",
