primera parte del login with Google

--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
+    "gapi-script": "^1.2.0",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
     "react-jwt": "^1.1.6",
