--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "canvas-confetti": "^1.5.1",
+    "chart.js": "^3.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
